--- a/source/App.css
+++ b/source/App.css
@@ -3,8 +3,12 @@
 	This way, you can minify your application, and just remove the "source" folder for production
 */
 #app {
-	margin: 16px;
-	border-radius: 4px;
-	background-color: silver;
-	padding: 16px;
+	background-color: black;
+}
+
+#grabber {
+	-webkit-transform:rotate(90deg);
+	-moz-transform:rotate(90deg);
+	-o-transform:rotate(90deg);
+	-ms-transform:rotate(90deg);
 }
